--- a/src/app/core/layout/client/client-layout/client-layout.component.scss
+++ b/src/app/core/layout/client/client-layout/client-layout.component.scss
@@ -19,11 +19,43 @@
     &__content {
         //background: yellow;
     }
+
+    &__account {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 16px 0;
+    }
+
+    &__avatar {
+        width: 100px;
+        height: 100px;
+    }
+
+    &__accountbox {
+        font-size: 18px;
+        padding: 8px 0;
+        font-weight: 700;
+
+        > span {
+            padding: 4px;
+        }
+    }
+
+    &__button {
+        padding: 8px;
+    }
+
 }
 
 // =======================================================
 
 .mainnav {
+    width: 100%;
+    position: fixed;
+    border-bottom: 4px solid darken(#3F51B5, 5%);
+    box-shadow: 0 0 12px 2px lighten(#3F51B5, 20%);
 
     &__nav {
         padding: 0;
@@ -40,4 +72,17 @@
             background: transparent;
         }
     }
+}
+
+.accountbox {
+
+    &__item {
+        color: #fff;
+
+        & a {
+          color: inherit;
+        }
+
+    }
+
 }
