--- a/src/app/features/reservation/component/reservation-edit/reservation-edit.component.html
+++ b/src/app/features/reservation/component/reservation-edit/reservation-edit.component.html
@@ -1,2 +1,19 @@
-<p>reservation-edit works!</p>
+<h2 mat-dialog-title>Edit Reservation</h2>
+<mat-dialog-content>
+    <form [formGroup]="form">
+        <mat-form-field>
+            <input matInput placeholder="Skąd" formControlName="fromCity">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Do" formControlName="toCity">
+        </mat-form-field>
+    </form>
+</mat-dialog-content>
+<mat-dialog-actions>
+    <div class="">
+        <button mat-raised-button mat-dialog-close>Cancel</button>
+        <button mat-raised-button color="primary">Save</button>
+    </div>
+</mat-dialog-actions>
 
+<pre> {{ form.value | json }}</pre>
