--- a/src/app/features/reservation/component/reservation-list/reservation-list.component.html
+++ b/src/app/features/reservation/component/reservation-list/reservation-list.component.html
@@ -1,13 +1,18 @@
-<table mat-table [dataSource]="dataSource">
+<table mat-table [dataSource]="dataSource" *ngIf="dataSource.data.length > 0; else noAvailableReservations">
 
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Id. </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    <ng-container matColumnDef="reservation_id">
+        <th mat-header-cell *matHeaderCellDef> Numer Rezerwacji </th>
+        <td mat-cell *matCellDef="let element"> {{element.reservation_id}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef> Email </th>
-        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+    <ng-container matColumnDef="fromCity">
+        <th mat-header-cell *matHeaderCellDef> Skąd </th>
+        <td mat-cell *matCellDef="let element"> {{element.fromCity}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="toCity">
+        <th mat-header-cell *matHeaderCellDef> Do </th>
+        <td mat-cell *matCellDef="let element"> {{element.toCity}} </td>
     </ng-container>
 
     <ng-container matColumnDef="menu">
@@ -15,7 +20,8 @@
         <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="accent" [matMenuTriggerFor]="reservationMenu"><mat-icon>more_vert</mat-icon></button>
             <mat-menu #reservationMenu='matMenu'>
-                <button mat-menu-item>Edit</button>
+                <button mat-menu-item>View</button>
+                <button mat-menu-item (click)="openEditReservationModal()">Edit</button>
                 <button mat-menu-item>Delete</button>
             </mat-menu>
         </td>
@@ -23,8 +29,14 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClicked(row)"></tr>
-
 </table>
 
+<ng-template #noAvailableReservations>
+    <div class="reservations__empty">
+        <h3 class="reservations__error">Brak dostępnych rezerwacji</h3>
+    </div>
+</ng-template>
+
 <p>{{ selectedRow.reservation_id }}</p>
-<p>{{ selectedRow.email}}</p>
+<p>{{ selectedRow.fromCity}}</p>
+<p>{{ selectedRow | json }}</p>
