--- a/src/app/core/layout/client/client-layout/client-layout.component.html
+++ b/src/app/core/layout/client/client-layout/client-layout.component.html
@@ -28,6 +28,7 @@
                 </div>
             </div>
             <button class="sidenav__button" mat-raised-button color="primary" title="Zaloguj aby zobaczyć swój profil" *ngIf="isAuthenticated == false" routerLink="auth/login">ZALOGUJ</button>
+            <button class="sidenav__button" mat-raised-button color="primary" title="Zaloguj aby zobaczyć swój profil" *ngIf="isAuthenticated == false" routerLink="auth/register">Zarejestruj</button>
             <mat-divider></mat-divider>
             <button class="sidenav__button" mat-button disabled>Usługi</button>
             <mat-divider></mat-divider>
@@ -62,8 +63,8 @@
                             <button mat-button *ngIf="isAuthenticated == true" [matMenuTriggerFor]="accountMenu"><mat-icon>account_circle</mat-icon></button>
                         </mat-list-item>
 
-                        <mat-list-item class="accountbox__item" *ngIf="isAuthenticated == true">
-                            <span>{{ user.firstName }}</span>
+                        <mat-list-item class="accountbox__item mainnav__item--disabled" disabled *ngIf="isAuthenticated == true">
+                            <span>Cześć {{ user.firstName }}!</span>
                         </mat-list-item>
                     </mat-nav-list>
 
