--- a/src/app/features/auth/component/login-form/login-form.component.html
+++ b/src/app/features/auth/component/login-form/login-form.component.html
@@ -10,7 +10,7 @@
         <mat-form-field appearance="outline">
             <mat-label>Hasło</mat-label>
             <input matInput [type]="hide ? 'password' : 'text'" placeholder="Hasło" formControlName="password">
-            <button mat-icon-button matSuffix (click)="hide = !hide">
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Ukryj hasło'" [attr.aria-pressed]="hide">
                 <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
             </button>
             <!--<mat-error *ngIf="loginForm.controls.password.hasError('required')">Hasło jest wymagane</mat-error>-->
