--- a/src/app/features/reservation/component/reservation-list/reservation-list.component.scss
+++ b/src/app/features/reservation/component/reservation-list/reservation-list.component.scss
@@ -11,6 +11,10 @@ td:last-child {
 }
 
 .reservations {
+    padding: 8px 64px;
+    font-size: 2em;
+    font-weight: 700;
+    width: 100%;
 
     &__empty {
         background: #e2dada;
@@ -24,5 +28,11 @@ td:last-child {
         font-weight: 700;
         font-size: 2em;
         text-transform: uppercase;
+    }
+
+    &__title {
+        margin: 0;
+        font-weight: 500;
+        font-size: 1.6rem;
     }
 }
