--- a/src/app/core/layout/client/client-layout/client-layout.component.html
+++ b/src/app/core/layout/client/client-layout/client-layout.component.html
@@ -35,7 +35,7 @@
             <button class="sidenav__button" mat-button *ngIf="isAuthenticated == true">Moje Rezerwacje</button>
             <button class="sidenav__button" mat-button *ngIf="isAuthenticated == true">Moje Konto</button>
             <mat-divider></mat-divider>
-            <button class="sidenav__button" mat-button *ngIf="isAuthenticated == true">Panel Pracownika</button>
+            <button class="sidenav__button" mat-button routerLink="/driver" *ngIf="isAuthenticated == true && isDriver == true">Panel Pracownika</button>
             <button class="sidenav__button" mat-button routerLink="/admin" *ngIf="isAuthenticated == true">Panel Administratora</button>
             <mat-divider></mat-divider>
         </div>
@@ -73,13 +73,20 @@
         </mat-toolbar>
 
         <app-hero class="herobar"></app-hero>
+        <router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
 
 <mat-menu #accountMenu="matMenu">
-    <button mat-menu-item routerLink="/admin">Panel Administratora</button>
+    <button mat-menu-item routerLink="/driver" *ngIf="isDriver == true">Panel Pracownika</button>
+    <button mat-menu-item routerLink="/admin" *ngIf="role == 'admin'">Panel Administratora</button>
     <mat-divider></mat-divider>
-    <button mat-menu-item>Moje bilety</button>
+    <button mat-menu-item routerLink="/profile">Moje Konto</button>
+    <button mat-menu-item>Moje Bilety</button>
     <mat-divider></mat-divider>
     <button mat-menu-item (click)="logout()">Wyloguj</button>
 </mat-menu>
+
+<!--<div *ngIf="authService.isLogged | async">
+    Zalogowany
+</div>-->
