--- a/src/app/features/reservation/component/reservation-list/reservation-list.component.html
+++ b/src/app/features/reservation/component/reservation-list/reservation-list.component.html
@@ -1,28 +1,48 @@
-<table mat-table [dataSource]="dataSource" *ngIf="dataSource.data.length > 0; else noAvailableReservations">
+<div class="reservations" fxLayout="row" fxLayoutAlign="space-between center">
+<h3 class="reservations__title">Rezerwacje</h3>
+<button mat-fab (click)="openModal()"><mat-icon>add</mat-icon></button>
+</div>
 
-    <ng-container matColumnDef="reservation_id">
+<table mat-table [dataSource]="dataSource">
+
+    <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> Numer Rezerwacji </th>
-        <td mat-cell *matCellDef="let element"> {{element.reservation_id}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="fromCity">
+    <ng-container matColumnDef="from">
         <th mat-header-cell *matHeaderCellDef> Skąd </th>
-        <td mat-cell *matCellDef="let element"> {{element.fromCity}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.from}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="toCity">
+    <ng-container matColumnDef="to">
         <th mat-header-cell *matHeaderCellDef> Do </th>
-        <td mat-cell *matCellDef="let element"> {{element.toCity}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.to}} </td>
     </ng-container>
+
+    <ng-container matColumnDef="user.firstName">
+        <th mat-header-cell *matHeaderCellDef> Imię </th>
+        <td mat-cell *matCellDef="let element"> {{element.user.firstName}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="user.lastName">
+        <th mat-header-cell *matHeaderCellDef> Nazwisko </th>
+        <td mat-cell *matCellDef="let element"> {{element.user.lastName}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> Status Rezerwacji </th>
+        <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+    </ng-container>
+
 
     <ng-container matColumnDef="menu">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="accent" [matMenuTriggerFor]="reservationMenu"><mat-icon>more_vert</mat-icon></button>
             <mat-menu #reservationMenu='matMenu'>
-                <button mat-menu-item>View</button>
-                <button mat-menu-item (click)="openEditReservationModal()">Edit</button>
-                <button mat-menu-item>Delete</button>
+                <button mat-menu-item (click)="openModal(element)">Edit</button>
+                <button mat-menu-item (click)="onDelete(element.id)">Delete</button>
             </mat-menu>
         </td>
     </ng-container>
@@ -31,12 +51,9 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClicked(row)"></tr>
 </table>
 
-<ng-template #noAvailableReservations>
-    <div class="reservations__empty">
-        <h3 class="reservations__error">Brak dostępnych rezerwacji</h3>
-    </div>
-</ng-template>
-
-<p>{{ selectedRow.reservation_id }}</p>
-<p>{{ selectedRow.fromCity}}</p>
+<!--
+<p>{{ selectedRow.id }}</p>
+<p>{{ selectedRow.from}}</p>
 <p>{{ selectedRow | json }}</p>
+-->
+
