--- a/src/app/features/users/component/users-list/users-list.component.html
+++ b/src/app/features/users/component/users-list/users-list.component.html
@@ -1,6 +1,6 @@
 <div class="user" fxLayout="row" fxLayoutAlign="space-between center">
     <h3 class="user__title">Użytkownicy</h3>
-    <button mat-fab><mat-icon>add</mat-icon></button>
+    <button mat-fab (click)="openModal()"><mat-icon>add</mat-icon></button>
 </div>
 
 <table mat-table [dataSource]="dataSource">
@@ -30,14 +30,18 @@
         <td mat-cell *matCellDef="let element"> {{ element.birthDate | date: 'dd-MM-YYYY'}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="role">
+        <th mat-header-cell *matHeaderCellDef> Rola </th>
+        <td mat-cell *matCellDef="let element"> {{ element.role }} </td>
+    </ng-container>
+
     <ng-container matColumnDef="menu">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="accent" [matMenuTriggerFor]="reservationMenu"><mat-icon>more_vert</mat-icon></button>
             <mat-menu #reservationMenu='matMenu'>
-                <button mat-menu-item (click)="reservationViewDetails()">View</button>
-                <button mat-menu-item>Edit</button>
-                <button mat-menu-item>Delete</button>
+                <button mat-menu-item (click)="openModal(element)">Edit</button>
+                <button mat-menu-item (click)="onDelete(element.id)">Delete</button>
             </mat-menu>
         </td>
     </ng-container>
