--- a/src/app/features/reservation/component/reservation-list/reservation-list.component.html
+++ b/src/app/features/reservation/component/reservation-list/reservation-list.component.html
@@ -12,17 +12,22 @@
 
     <ng-container matColumnDef="from">
         <th mat-header-cell *matHeaderCellDef> Skąd </th>
-        <td mat-cell *matCellDef="let element"> {{element.from}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.route.start.name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="to">
         <th mat-header-cell *matHeaderCellDef> Do </th>
-        <td mat-cell *matCellDef="let element"> {{element.to}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.route.end.name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="arrival_date">
+        <th mat-header-cell *matHeaderCellDef> Data Podróży </th>
+        <td mat-cell *matCellDef="let element"> {{element.route.arrival_date | date: 'dd-MM-YYYY - HH:mm' }}</td>
     </ng-container>
 
     <ng-container matColumnDef="user.firstName">
         <th mat-header-cell *matHeaderCellDef> Imię </th>
-        <td mat-cell *matCellDef="let element"> {{element.user.firstName}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.user.firstName}}</td>
     </ng-container>
 
     <ng-container matColumnDef="user.lastName">
