--- a/src/app/features/routes/component/routes-list/routes-list.component.html
+++ b/src/app/features/routes/component/routes-list/routes-list.component.html
@@ -20,18 +20,14 @@
         <td mat-cell *matCellDef="let element"> {{ element.end.name }} </td>
     </ng-container>
 
-    <ng-container matColumnDef="stops">
-        <th mat-header-cell *matHeaderCellDef> Przystanki </th>
-        <td mat-cell *matCellDef="let element">
-            <tr *ngFor="let stopName of element.stops">
-                <td class="stopstd">{{ stopName.name }}</td>
-            </tr>
-
+    <ng-container matColumnDef="driver">
+        <th mat-header-cell *matHeaderCellDef> Kierowca </th>
+        <td mat-cell *matCellDef="let element"> {{ element.driver.firstName }} {{element.driver.lastName}} </td>
     </ng-container>
 
     <ng-container matColumnDef="arrival_date">
         <th mat-header-cell *matHeaderCellDef>Data Podróży</th>
-        <td mat-cell *matCellDef="let element"> {{ element.arrival_date | date: 'dd-MM-YYYY - hh:mm'}} </td>
+        <td mat-cell *matCellDef="let element"> {{ element.arrival_date | date: 'dd-MM-YYYY - HH:mm'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="menu">
@@ -39,8 +35,8 @@
         <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="accent" [matMenuTriggerFor]="routesMenu"><mat-icon>more_vert</mat-icon></button>
             <mat-menu #routesMenu='matMenu'>
-                <button mat-menu-item (click)="openModal()">Edit</button>
-                <button mat-menu-item (click)="openModal()">Delete</button>
+                <button mat-menu-item (click)="openModal(element)">Edit</button>
+                <button mat-menu-item (click)="onDelete(element.id)">Delete</button>
             </mat-menu>
         </td>
     </ng-container>
